README changes, microphone and launch script updates

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,8 +4,10 @@ rec_duration: 4
 rec_samplerate: 44100
 rec_channels: 1
 
+microphone_name: "MacBook Pro Microphone"
+
 content:
-    content_file: './content/teddy_content_robot.json'
+    content_file: "./content/teddy_content_robot.json"
 
 KWS:
     samplerate: 16000
