--- a/pyproject.toml
+++ b/pyproject.toml
@@ -201,3 +201,7 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^4.1.0"
+types-pyyaml = "^6.0.12.20241230"
