--- a/pyproject.toml
+++ b/pyproject.toml
@@ -205,3 +205,4 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.1.0"
 types-pyyaml = "^6.0.12.20241230"
+pytest = "^8.3.5"
